--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.1"
+    "remix": "^1.1.1",
+    "remix-auth": "^3.2.1",
+    "remix-auth-auth0": "^1.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
